# semantic-document-search

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/semantic_search/: __main__.py  chunk.py  chunker.py  embedding_model.py  exceptions.py  loader.py  search.py  search_index.py
src/semantic_search/indexing/: chunker.py  embedding_model.py  loader.py
src/semantic_search/models/: document.py  search_result.py
src/semantic_search/search/: search.py  search_index.py
tests/: test_chunker.py  test_cli.py  test_embedding_model.py  test_loader.py  test_persistence.py  test_search.py  test_search_index.py
tests/fixtures/: refund_policy.txt  shipping_info.txt
