[project]
name = "semantic-document-search"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "nltk",
    "numpy",
    "scikit-learn",
    "sentence-transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nltk.*"
ignore_missing_imports = true